--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
 <h2>Angular with D3.JS Charts Testing</h2>
 
-<area-chart></area-chart>
-<stacked-area-chart></stacked-area-chart>
+
+    <stacked-area-chart-v2></stacked-area-chart-v2>
+
+
+
+
+<!-- <area-chart></area-chart>
+<stacked-area-chart></stacked-area-chart> -->
 
 <router-outlet></router-outlet>
