--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h2>Angular with D3.JS Charts Testing</h2>
 
 
-    <stacked-area-chart-v2></stacked-area-chart-v2>
+    <stacked-area-chart></stacked-area-chart>
 
 
 
